# LightmapsBuilder

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: Panzer Lightmaps Builder.txt  Spisok parametrov sozdanija kart osvescenija.txt  matematiceskoje obosnovanije.txt
shaders/: ambient_light_pass_f.glsl  ambient_light_pass_g.glsl  ambient_light_pass_v.glsl  cone_light_pass_f.glsl  directional_light_sky_mark_f.glsl  light_source_draw_f.glsl  light_source_draw_v.glsl  luminosity_preview_f.glsl  normals_f.glsl  normals_v.glsl  point_light_pass_f.glsl  point_light_pass_g.glsl  point_light_pass_v.glsl  point_light_shadowmap_f.glsl  point_light_shadowmap_g.glsl  point_light_shadowmap_v.glsl  preview_f.glsl  preview_v.glsl  secondary_light_pass_cubemap_unwrap_f.glsl  secondary_light_pass_cubemap_unwrap_v.glsl  secondary_light_pass_f.glsl  secondary_light_pass_g.glsl  secondary_light_pass_luminosity_f.glsl  secondary_light_pass_v.glsl  secondary_light_pass_vertex_lighted_f.glsl  secondary_light_pass_vertex_lighted_g.glsl  secondary_light_pass_vertex_lighted_v.glsl  secondary_light_pass_write_f.glsl  secondary_light_pass_write_g.glsl  secondary_light_pass_write_v.glsl  shadowmap_f.glsl  shadowmap_v.glsl  sun_light_pass_f.glsl  sun_shadowmap_v.glsl  surface_sample_light_pass_f.glsl  texture_show_f.glsl  texture_show_v.glsl  vertex_lighted_preview_f.glsl  vertex_lighted_preview_v.glsl
src/: camera_controller.cpp  camera_controller.hpp  curves.cpp  curves.hpp  formats.hpp  hl_bsp_loader.cpp  lightmaps_builder.cpp  lightmaps_builder.hpp  lights_visualizer.cpp  lights_visualizer.hpp  loaders_common.cpp  loaders_common.hpp  main.cpp  math_utils.cpp  math_utils.hpp  q1_bsp_loader.cpp  q2_bsp_loader.cpp  q3_bsp_loader.cpp  q3_bsp_loader.hpp  rasterizer.hpp  rasterizer.inl  textures_manager.cpp  textures_manager.hpp  tracer.cpp  tracer.hpp  world_vertex_buffer.cpp  world_vertex_buffer.hpp
